# ChangeLog for gnome-base/control-center
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/control-center/Attic/ChangeLog,v 1.227 2007/05/01 16:05:23 dang Exp $

  01 May 2007; Daniel Gryniewicz <dang@gentoo.org>
  +files/control-center-2.18.1-fbsd.patch, control-center-2.18.1.ebuild:
  Fix build on fbsd; bug #176655

  18 Apr 2007; Daniel Gryniewicz <dang@gentoo.org>
  control-center-2.18.1.ebuild:
  New gnome-doc-utils dep; bug #175015

*control-center-2.18.1 (17 Apr 2007)

  17 Apr 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  +files/control-center-2.18.1-gnome-doc-utils-fix.patch,
  +control-center-2.18.1.ebuild:
  Version bump for 2.18.1

  01 Apr 2007; Marinus Schraal <foser@gentoo.org> control-center-2.18.0.ebuild :
  Disable mimedb update during configure

  24 Mar 2007; Daniel Gryniewicz <dang@gentoo.org>
  +control-center-2.18.0.ebuild:
  add gnome 2.18.0

  23 Mar 2007; Daniel Gryniewicz <dang@gentoo.org>
  control-center-2.14.2.ebuild, control-center-2.16.2.ebuild,
  control-center-2.16.3.ebuild:
  Add xmodmap dep; bug #171891

  17 Feb 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  files/digest-control-center-2.16.3, Manifest:
  redigest control-center for bug #167282

  16 Feb 2007; Daniel Gryniewicz <dang@gentoo.org>
  control-center-2.16.3.ebuild:
  needs gnome-common to reautoconf

  16 Feb 2007; Daniel Gryniewicz <dang@gentoo.org>
  control-center-2.16.2.ebuild:
  needs gnome-common to reautoconf

  09 Feb 2007; Roy Marples <uberlord@gentoo.org>
  control-center-2.16.3.ebuild:
  Added ~x86-fbsd keyword.

*control-center-2.16.3 (08 Feb 2007)

  08 Feb 2007; Mart Raudsepp <leio@gentoo.org>
  +control-center-2.16.3.ebuild:
  Version bump

  31 Jan 2007; Daniel Gryniewicz <dang@gentoo.org>
  control-center-2.16.2.ebuild:
  Make hal optional; bug #157867

  21 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
  control-center-2.16.2.ebuild: