@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/control-center
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/control-center/Attic/ChangeLog,v 1.227 2007/05/01 16:05:23 dang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/control-center/Attic/ChangeLog,v 1.228 2007/05/28 08:41:58 leio Exp $
+
+  28 May 2007; Mart Raudsepp <leio@gentoo.org> control-center-2.16.3.ebuild:
+  Restrict tests
 
   01 May 2007; Daniel Gryniewicz <dang@gentoo.org>
   +files/control-center-2.18.1-fbsd.patch, control-center-2.18.1.ebuild:
